syntax = "proto3";
package BakerNews;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_ADMIN = 1;
  USER_ROLE_USER = 2;
}

message User {
  int32 id = 1;
  string name = 2;
  UserRole role = 3;

  google.protobuf.Timestamp created_at = 4;
}

message Article {
  int32 id = 1;
  string title = 2;
  string url = 3;
  User author = 4;
  int32 score = 5;

  google.protobuf.Timestamp created_at = 6;
}

message ArticleList { repeated Article articles = 1; }

message GetArticleListResponse { ArticleList article_list = 1; }

message GetArticleRequest { int32 id = 1; }
message GetArticleResponse { Article article = 1; }

service BakerNewsService {
  rpc GetArticleList(google.protobuf.Empty) returns (GetArticleListResponse) {}

  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse) {}
}
